<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/La1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <CheckBox
            android:id="@+id/cb_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cb_autologin"
            android:layout_alignBottom="@+id/cb_autologin"
            android:text="记住密码" />

        <CheckBox
            android:id="@+id/cb_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="自动登录" />
    </LinearLayout>


    <Button
        android:id="@+id/bt_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="注册" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/La2"
        android:layout_alignLeft="@+id/La2"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="13dp"
        android:hint="用户名" />

    <LinearLayout
        android:id="@+id/La2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/La1"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="请输入密码" />

        <ToggleButton
            android:id="@+id/tb_show_hide_pass"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_hide_password_black_24dp"
            android:textOff=""
            android:textOn=""
            android:padding="10dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/bt_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/La1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="登录" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_account"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="27dp"
        android:text="无限传感网络隧道监测系统"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_register"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        android:text="中铁西南研究院有限公司"
        android:textSize="25dp" />

</RelativeLayout>
